# inventree-assembly-instructions

./: .gitignore  README.md  pyproject.toml
inventree_assembly_instructions/: __init__.py  inventree_assembly_instructions.py
inventree_assembly_instructions/static/assembly_instructions/: panel.js
